Updated to reflect completion of first class

--- a/wk01content.html
+++ b/wk01content.html
@@ -7,7 +7,7 @@
   <H3>Week 1 2017-2018 Capstone Project Overview</H3>
   <p>
    <ol>
-	<li>Schedule for today: Introduction, Crib Pi, Homework (Lynda.com, Choose an I2C address, fill in excel table for proposal).</li>
+	<li>Schedule for today: Introduction, <a href="https://six0four.github.io/StudentSenseHat/cribpi.html">Crib Pi</a>, Homework (Lynda.com, Choose an I2C address, fill in excel table for proposal).</li>
     <li>Start off by logging into a computer. Please visit the blackboard site. I have noticed that the mobile site can make it difficult to get to the discussion board, <a href="https://learn.humber.ca/webapps/discussionboard/do/conference?action=list_forums&course_id=_118206_1&nav=discussion_board_entry">here</a>
 	 is the direct link to the course discussion board.</li>
 	<li>Regarding computer issues please report them to ITS via Ali_dot_Owayid_at_humber_dot_ca and cc me to bring downed computers to our attention for repair.</li>
@@ -82,7 +82,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MAX3010x Pulse & Oximetry sensor (0x57).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Romario TPA2016 I2C-controlled Amplifier (0x58).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> DRV2605 Haptic Motor Driver (0x5A).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> CCS811 VOC sensor (0x5B).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Princess CCS811 VOC sensor (0x5B).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kevin AM2315 Humidity/Temp sensor (0x5C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MPR121 12-point capacitive touch sensor (0x5D).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Darren TEA5767 Radio receiver (0x60).</li>
