Updated address choices

--- a/wk01content.html
+++ b/wk01content.html
@@ -54,7 +54,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jeremy FXAS21002 Gyroscope (0x21).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23008 I2C GPIO expander (0x22).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23017 I2C GPIO expander (0x23).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VL53L0x ToF distance (0x24 software selectable).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Aldous VL53L0x ToF distance (0x24 software selectable).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jacob <a href="http://www.digole.com/index.php?productID=1215">Digole display</a> (0x27).</li>
 	<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Suong TCS34725 color sensor (0x29).</li>
@@ -63,7 +63,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Karan FT6x06 Capacitive Touch Driver (0x38).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VEML6070 UV Index (0x39).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> SSD1305 monochrome OLED (0x3C).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> SSD1306 monochrome OLED (0x3D).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Delroy SSD1306 monochrome OLED (0x3D).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HTU21D-F Humidity/Temp Sensor (0x40).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Sahil STMPE610/STMPE811 Resistive Touch controller (0x41).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Duc HDC1008 Humidity/Temp sensor (0x42).</li>
@@ -79,12 +79,12 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MB85RC I2C FRAM (0x50).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Andrew Nintendo Nunchuck controller (0x52).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> ADXL345 3-axis accelerometer (0x53).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MAX3010x Pulse & Oximetry sensor (0x57).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Gurpreet MAX3010x Pulse & Oximetry sensor (0x57).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Romario TPA2016 I2C-controlled Amplifier (0x58).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> DRV2605 Haptic Motor Driver (0x5A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Princess CCS811 VOC sensor (0x5B).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kevin AM2315 Humidity/Temp sensor (0x5C).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MPR121 12-point capacitive touch sensor (0x5D).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jonas MPR121 12-point capacitive touch sensor (0x5D).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Darren TEA5767 Radio receiver (0x60).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Si5351A Clock Generator (0x61).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A1 12-bit DAC (0x62).</li>
@@ -95,7 +95,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Bettin *LSM9DS0 9-axis IMU (0x1D for Accel/Mag, *0x6A for Gyro).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kenneth L3GD20H gyroscope (0x6B).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TCA9548 1-to-8 I2C Multiplexer (0x70).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HT16K33 LED Matrix Driver (0x72).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kemar HT16K33 LED Matrix Driver (0x72).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kuljeet IS31FL3731 144-LED CharliePlex driver (0x74).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> PCA9685 16-channel PWM driver (0x75).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Gursehaj MS5607/MS5611 Barometric Pressure (0x76).</li>
