Update for fall 2018

--- a/newcontent.html
+++ b/newcontent.html
@@ -5,7 +5,7 @@
 
  <SECTION ID="Section_1">
   <H3><a 
-href="https://six0four.github.io/ceng317/wk01.html">Week 1 2017-2018 Capstone Project Overview (Tuesday Sept. 4)</a></H3>
+href="https://six0four.github.io/ceng317/wk01.html">Week 1 Hardware (Tuesday Sept. 4)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_2">
