--- a/newcontent.html
+++ b/newcontent.html
@@ -10,73 +10,73 @@ href="https://six0four.github.io/ceng317/wk01.html">Week 1 Hardware (Tuesday Sep
  
  <SECTION ID="Section_2">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk02.html">Week 2 Hardware (Tuesday Sept. 11)</a></H3>
+href="https://six0four.github.io/ceng317/wk02.html">Week 2 Hardware (Tuesday Sept. 11)</a></H3>
  </SECTION>
 
  <SECTION ID="Section_3">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk03.html">Week 3 Hardware  (Tuesday Sept. 18)</a></H3>
+href="https://six0four.github.io/ceng317/wk03.html">Week 3 Hardware  (Tuesday Sept. 18)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_4">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk04.html">Week 4 Hardware (Tuesday Sept. 25)</a></H3>
+href="https://six0four.github.io/ceng317/wk04.html">Week 4 Hardware (Tuesday Sept. 25)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_5">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk05.html">Week 5 Hardware (Tuesday Oct. 2)</a></H3>
+href="https://six0four.github.io/ceng317/wk05.html">Week 5 Hardware (Tuesday Oct. 2)</a></H3>
   <H3>Study Day</H3>
  </SECTION>
 	
  <SECTION ID="Section_6">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk06.html">Week 6 Hardware (Tuesday Oct. 9)</a></H3>
+href="https://six0four.github.io/ceng317/wk06.html">Week 6 Hardware (Tuesday Oct. 9)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_7">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk07.html">Week 7 Hardware (Tuesday Oct. 16)</a></H3>
+href="https://six0four.github.io/ceng317/wk07.html">Week 7 Hardware (Tuesday Oct. 16)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_8">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk08.html">Week 8 Hardware (Tuesday Oct. 23)</a></H3>
+href="https://six0four.github.io/ceng317/wk08.html">Week 8 Hardware (Tuesday Oct. 23)</a></H3>
  </SECTION> 
  
  <SECTION ID="Section_9">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk09.html">Week 9 Hardware (Tuesday Oct. 30)</a></H3>
+href="https://six0four.github.io/ceng317/wk09.html">Week 9 Hardware (Tuesday Oct. 30)</a></H3>
  </SECTION> 
 
  <SECTION ID="Section_10">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk10.html">Week 10 Hardware (Tuesday Nov. 6)</a></H3>
+href="https://six0four.github.io/ceng317/wk10.html">Week 10 Hardware (Tuesday Nov. 6)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_11">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk11.html">Week 11 Hardware (Tuesday Nov. 13)</a></H3>
+href="https://six0four.github.io/ceng317/wk11.html">Week 11 Hardware (Tuesday Nov. 13)</a></H3>
  </SECTION>
 
  <SECTION ID="Section_12">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk12.html">Week 12 Hardware (Tuesday Nov. 20)</a></H3>
+href="https://six0four.github.io/ceng317/wk12.html">Week 12 Hardware (Tuesday Nov. 20)</a></H3>
  </SECTION>
 
  <SECTION ID="Section_13">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk13.html">Week 13 Hardware (Tuesday Nov. 27)</a></H3>
+href="https://six0four.github.io/ceng317/wk13.html">Week 13 Hardware (Tuesday Nov. 27)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_14">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk14.html">Week 14 Hardware (Tuesday Dec. 4)</a></H3>
+href="https://six0four.github.io/ceng317/wk14.html">Week 14 Hardware (Tuesday Dec. 4)</a></H3>
  </SECTION>
  
  <SECTION ID="Section_15">
   <H3><a 
-href="https://github.com/six0four/ceng317/wk15.html">Week 15 Hardware (Tuesday Dec. 11)</a></H3>
+href="https://six0four.github.io/ceng317/wk15.html">Week 15 Hardware (Tuesday Dec. 11)</a></H3>
  </SECTION>
 
  <SECTION ID="Section_100">
