No Kevin in this class

--- a/wk01content.html
+++ b/wk01content.html
@@ -56,7 +56,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23017 I2C GPIO expander (0x23).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Aldous VL53L0x ToF distance (0x24 software selectable).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jacob <a href="http://www.digole.com/index.php?productID=1215">Digole display</a> (0x27).</li>
-	<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Suong TCS34725 color sensor (0x29).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> CAP1188 8-channel Capacitive Touch (0x2A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x30-0x37).</li>
@@ -83,7 +83,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Romario TPA2016 I2C-controlled Amplifier (0x58).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> DRV2605 Haptic Motor Driver (0x5A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Princess CCS811 VOC sensor (0x5B).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kevin AM2315 Humidity/Temp sensor (0x5C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Colin AM2315 Humidity/Temp sensor (0x5C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jonas MPR121 12-point capacitive touch sensor (0x5D).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Darren TEA5767 Radio receiver (0x60).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Si5351A Clock Generator (0x61).</li>
