Ryan choice change

--- a/wk01content.html
+++ b/wk01content.html
@@ -44,11 +44,11 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Adrien Si4713 FM Transmitter with RDS (0x11).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> David VCNL40x0 proximity sensor (0x13).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anshul LIS3DH 3-axis accelerometer (0x18).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Sean MCP9808 temp sensor (0x1A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jasleen MMA845x 3-axis Accelerometer (0x1C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Bettin LSM9DS0 9-axis IMU (0x1D for Accel/Mag, *0x6A for Gyro).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> *LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan *LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Zhill FXOS8700 Accelerometer/Magnetometer (0x1F).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Divya Chirp! Water sensor (0x20).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jeremy FXAS21002 Gyroscope (0x21).</li>
@@ -62,7 +62,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x30-0x37).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Karan FT6x06 Capacitive Touch Driver (0x38).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VEML6070 UV Index (0x39).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan SSD1305 monochrome OLED (0x3C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> SSD1305 monochrome OLED (0x3C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Delroy SSD1306 monochrome OLED (0x3D).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HTU21D-F Humidity/Temp Sensor (0x40).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Sahil STMPE610/STMPE811 Resistive Touch controller (0x41).</li>
