--- a/wk01content.html
+++ b/wk01content.html
@@ -58,13 +58,13 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jacob <a href="http://www.digole.com/index.php?productID=1215">Digole display</a> (0x27).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Suong TCS34725 color sensor (0x29).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> CAP1188 8-channel Capacitive Touch (0x2A).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Juan CAP1188 8-channel Capacitive Touch (0x2A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x30-0x37).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Karan FT6x06 Capacitive Touch Driver (0x38).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VEML6070 UV Index (0x39).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> SSD1305 monochrome OLED (0x3C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Delroy SSD1306 monochrome OLED (0x3D).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HTU21D-F Humidity/Temp Sensor (0x40).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Johnson HTU21D-F Humidity/Temp Sensor (0x40).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Sahil STMPE610/STMPE811 Resistive Touch controller (0x41).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Duc HDC1008 Humidity/Temp sensor (0x42).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Denald ISL29125 Color Sensor (0x44).</li>
@@ -78,10 +78,10 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> INA219 High-Side DC Current/Voltage sensor (0x4C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MB85RC I2C FRAM (0x50).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Andrew Nintendo Nunchuck controller (0x52).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> ADXL345 3-axis accelerometer (0x53).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Dariusz ADXL345 3-axis accelerometer (0x53).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Gurpreet MAX3010x Pulse & Oximetry sensor (0x57).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Romario TPA2016 I2C-controlled Amplifier (0x58).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> DRV2605 Haptic Motor Driver (0x5A).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jordan DRV2605 Haptic Motor Driver (0x5A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Princess CCS811 VOC sensor (0x5B).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Colin AM2315 Humidity/Temp sensor (0x5C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jonas MPR121 12-point capacitive touch sensor (0x5D).</li>
@@ -90,7 +90,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A1 12-bit DAC (0x62).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A2 12-bit DAC (0x64).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A3 12-bit DAC (0x66).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> DS3231 RTC (0x68).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Rula DS3231 RTC (0x68).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kyele AMG8833 IR Thermal Camera Breakout (0x69).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Bettin *LSM9DS0 9-axis IMU (0x1D for Accel/Mag, *0x6A for Gyro).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kenneth L3GD20H gyroscope (0x6B).</li>
