--- a/wk01content.html
+++ b/wk01content.html
@@ -46,7 +46,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anshul LIS3DH 3-axis accelerometer (0x18).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Sean MCP9808 temp sensor (0x1A).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jasleen MMA845x 3-axis Accelerometer (0x1C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MMA845x 3-axis Accelerometer (0x1C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Bettin LSM9DS0 9-axis IMU (0x1D for Accel/Mag, *0x6A for Gyro).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan *LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Zhill FXOS8700 Accelerometer/Magnetometer (0x1F).</li>
@@ -56,7 +56,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23017 I2C GPIO expander (0x23).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Aldous VL53L0x ToF distance (0x24 software selectable).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jacob <a href="http://www.digole.com/index.php?productID=1215">Digole display</a> (0x27).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anubhav BNO055 IMU (0x28).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Suong TCS34725 color sensor (0x29).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Juan CAP1188 8-channel Capacitive Touch (0x2A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x30-0x37).</li>
@@ -74,8 +74,8 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kogul YL-40 PCF8591 (0x48).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Simarjeet/Divendra conflict... TSL2561 light sensor (0x49).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Shubham TMP102 Temperature sensor (0x4A).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> ADS1115 4-channel 16-bit ADC (0x4B).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> INA219 High-Side DC Current/Voltage sensor (0x4C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jasleen ADS1115 4-channel 16-bit ADC (0x4B).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Winson INA219 High-Side DC Current/Voltage sensor (0x4C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MB85RC I2C FRAM (0x50).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Andrew Nintendo Nunchuck controller (0x52).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Dariusz ADXL345 3-axis accelerometer (0x53).</li>
