Arman's choice added

--- a/wk01content.html
+++ b/wk01content.html
@@ -46,7 +46,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anshul LIS3DH 3-axis accelerometer (0x18).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Sean MCP9808 temp sensor (0x1A).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MMA845x 3-axis Accelerometer (0x1C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Arman MMA845x 3-axis Accelerometer (0x1C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Bettin LSM9DS0 9-axis IMU (0x1D for Accel/Mag, *0x6A for Gyro).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan *LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Zhill FXOS8700 Accelerometer/Magnetometer (0x1F).</li>
